# PhongSphere

./: CMakeLists.txt  CMakeSettings.json  README.md
glew/src/: visualinfo.c
glfw-3.2.1/: CMakeLists.txt
src/: CMakeLists.txt  assessment_1.cpp  assessment_1cu.cu  basic_shaders.cpp  basic_shaders.h  example_01.cpp  fast_math.cpp  fast_math.h  layered_toon_shader.cpp  layered_toon_shader.h  linmath.h  options.txt  sketch_shader.cpp  sketch_shader.h  translucent_shader.cpp  translucent_shader.h
